[build-system]
requires = ["setuptools>=68", "wheel", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypsx"
version = "3.1.1"
description = "Pakistan Stock Exchange (PSX) market data library — historical, intraday, fundamentals, sectors"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [
  { name = "pyPSX", email = "pypsxofficial@gmail.com" }
]
maintainers = [
  { name = "pyPSX", email = "pypsxofficial@gmail.com" }
]
keywords = ["psx", "pakistan", "stock", "finance", "data", "api", "pandas", "market-data"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "pandas>=2.0.0",
  "loguru>=0.7.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5.0", "seaborn>=0.11.0"]

[project.urls]
Homepage = "https://pypsx.com"
Documentation = "https://pypsx.com/docs"

[project.scripts]
pypsx = "pypsx:quick_start"

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]

[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.h"]

[tool.setuptools.packages.find]
where = ["."]
exclude = [
  "tests*",
  "test_*",
  "*.tests*",
  "build*",
  "dist*",
  "*.egg-info*",
]
